--- a/src/app/nurses-dashboard/nurses-dashboard.component.css
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.css
@@ -247,7 +247,7 @@ table {
   text-shadow: 0 1px 0 #fff;
   opacity: .5;
   padding-left: 15px;
-  position: relative;
+  position: absolute;
   z-index: 99999999 !important;
 }
 
