--- a/src/app/nurses-department-manage/nurses-department-manage.component.css
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.css
@@ -3,6 +3,7 @@
   font-size: small;
   width: 100%;
   margin: 0px 220px 0px 0px;
+  padding-top: 20px;
 }
   @media only screen and (min-width: 1050px) {
 
